# SGX-Reader

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  sgx_parser.py
converter/: README.md  STENCIL_MAPPING_REFERENCE.md  analyze_and_clean.py  analyze_signavio_elements.py  analyze_stencils.py  bpmn_syntactic_validation.py  compare_mappings.py  extract_json_from_csv.py  extract_stencils.py  signavio_to_bpmn.py  verify_event_definitions.py
sgx_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
